Minimize transient garbage creation identified by allocation profiling * UURIFactory, canonicalize/**, PathologicalPathDecideRule, ExtractorHTML     use recycled matchers via TextUtils * CrawlURI, KeyedProperties, OverlayContext, SheetOverlaysManager     use ArrayList and indexed access rather than LinkedList and iterator instances